--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,8 @@
 
 @import './components/myCard';
 @import './components/myCarousel';
+@import './components/heartButton';
+@import './components/heartStatic';
 
 @import './pages/index';
 @import './pages/donar';
