--- a/scss/pages/_adopta.scss
+++ b/scss/pages/_adopta.scss
@@ -78,3 +78,10 @@
 .myBoxes__item--spacer {
     height: 10vh;
 }
+.adopta__galeria {
+    display: flex;
+    flex-wrap: wrap;
+}
+.adopta__card-text {
+    height: 110px;
+}
